tests/integration/snapshots/integration__conformance__n_structure_unclosed_array_partial_null.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[ false, nul
stdout ---

stderr ---
error: unexpected character `n`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, nul
  |          ^
