tests/integration/snapshots/integration__conformance__n_structure_unclosed_array_unfinished_false.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[ true, fals
stdout ---

stderr ---
error: unexpected character `f`. expected start of a json value
 --> stdin:1:9
  |
1 | [ true, fals
  |         ^
